=增加豆瓣日记

--- a/syncart/sync.example.conf
+++ b/syncart/sync.example.conf
@@ -17,4 +17,14 @@ password =
 [mpwx]
 username = 
 password = 
-tag = 
+tag = 文学
+
+[jianshu]
+username = 
+password = 
+cookie = 
+
+[douban]
+username = 
+password = 
+cookie = 
