=微博直接发布

--- a/syncart/sync.example.conf
+++ b/syncart/sync.example.conf
@@ -3,9 +3,13 @@ url = http://www.jianshu.com/p/889728b62789
 qsjurl = http://www.jianshu.com/p/e0e3a76a8877 http://www.jianshu.com/p/87b0bc2e4bdb
 
 [lofter]
+tag = 摹喵居士
+tag_custom = 儿童 读书
 cookie = lofter登录cookie
 
 [zhihu]
+tag = 人文
+tag_custom = 儿童 阅读
 username = 
 password = 
 cookie = zhihu专栏登录cookie
