=lofter zhihu直接发，手动配置关键词

--- a/syncart/sync.example.conf
+++ b/syncart/sync.example.conf
@@ -3,13 +3,11 @@ url = http://www.jianshu.com/p/889728b62789
 qsjurl = http://www.jianshu.com/p/e0e3a76a8877 http://www.jianshu.com/p/87b0bc2e4bdb
 
 [lofter]
-tag = 摹喵居士
-tag_custom = 儿童 读书
+tag = 摹喵居士,儿童,-看图说话,-朝花夕拾,-读书
 cookie = lofter登录cookie
 
 [zhihu]
-tag = 人文
-tag_custom = 儿童 阅读
+tag = 人文,-儿童,-阅读,-钢琴,-回忆
 username = 
 password = 
 cookie = zhihu专栏登录cookie
