--- a/syncart/sync.example.conf
+++ b/syncart/sync.example.conf
@@ -7,7 +7,7 @@ tag = 摹喵居士,儿童,-看图说话,-朝花夕拾,-读书
 cookie = lofter登录cookie
 
 [zhihu]
-tag = 人文,-儿童,-阅读,-钢琴,-回忆
+tag = 人文,-儿童,-阅读,-钢琴,-回忆,-历史
 username = 
 password = 
 cookie = zhihu专栏登录cookie
