--- a/syncart/tag.example.conf
+++ b/syncart/tag.example.conf
@@ -1,8 +1,8 @@
 
 [lofter]
-tag = 摹喵居士,-儿童,-看图说话,-朝花夕拾,-读书,-历史
+tag = 摹喵居士,儿童,-看图说话,-朝花夕拾,-读书,-历史
 
 [zhihu]
-tag = 人文,-儿童,-阅读,-钢琴,-回忆,-历史
+tag = 人文,儿童,-阅读,-钢琴,-回忆,-历史
 
 
