--- a/syncart/sync.example.conf
+++ b/syncart/sync.example.conf
@@ -3,14 +3,12 @@ url = http://www.jianshu.com/p/889728b62789
 qsjurl = http://www.jianshu.com/p/e0e3a76a8877 http://www.jianshu.com/p/87b0bc2e4bdb
 
 [lofter]
-tag = 摹喵居士,儿童,-看图说话,-朝花夕拾,-读书
-cookie = lofter登录cookie
+cookie = 
 
 [zhihu]
-tag = 人文,-儿童,-阅读,-钢琴,-回忆,-历史
 username = 
 password = 
-cookie = zhihu专栏登录cookie
+cookie = 
 
 [weibo]
 username = 
